--- a/src/blocks/popup/__infoToolTip-text/popup__infoToolTip-text.css
+++ b/src/blocks/popup/__infoToolTip-text/popup__infoToolTip-text.css
@@ -1,4 +1,4 @@
-.popup__infoToolTip-text {
+.popup__infoTooltip-text {
     color: #000000;
     font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
