--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@
 @import url(./blocks/homepage/__button/_caption/homepage__button_caption.css);
 @import url(./blocks/homepage/__button/_link/homepage__button_link.css);
 
-
+/* Я попробовал перезалить еще раз, но ту ошибку, которую показывает у Вас, у меня ее нет */
 
 
 
